OLMIS-6020: Hour and Minute inputs of openlmisCronSelection directive will now accept only positive integer

--- a/src/openlmis-cron-selection/openlmis-cron-selection.html
+++ b/src/openlmis-cron-selection/openlmis-cron-selection.html
@@ -30,6 +30,7 @@
 
         <input id="hour"
             type="text"
+            positive-integer
             ng-model="hour"
             ng-required="!ngDisabled && ngRequired && !isComplex"
             ng-disabled="ngDisabled"/>
@@ -43,6 +44,7 @@
 
         <input id="minute"
             type="text"
+            positive-integer
             ng-model="minute"
             ng-required="!ngDisabled && ngRequired && !isComplex"
             ng-disabled="ngDisabled"/>
