OLMIS-6361 made header in system notification flexible and added translatable text

--- a/src/openlmis-message/message.html
+++ b/src/openlmis-message/message.html
@@ -6,7 +6,7 @@
         <div class="date">
             {{$ctrl.userFirstName}}
             {{$ctrl.userLastName}}
-            on
+            {{'openlmisMessage.on' | message}}
             {{$ctrl.createdDate | openlmisDate}}
         </div>
     </header>
