OLMIS-7316 Migration to bootstrap 4

--- a/src/openlmis-locale/openlmis-locale.directive.html
+++ b/src/openlmis-locale/openlmis-locale.directive.html
@@ -12,3 +12,17 @@
         </li>
     </ul>
 </div>
+<!-- <div class="d-block d-md-none locale-container" ng-if="locale.locales.length > 1">
+    <a class="btn btnBrowse dropdown-toggle" bs-dropdown aria-haspopup="true" aria-expanded="false">
+        {{ 'locale.label' | message }}
+    </a>
+    <div class="dropdown-menu" role="menu">
+        <li ng-repeat="code in locale.locales">
+            <a class="dropdown-item" ng-click="locale.changeLocale(code)"
+                ng-class="{'selected':(locale.selectedLocale === code)}"
+                >
+                {{locale.getLocaleName(code) | message}}
+            </a>
+        </li>
+    </div>
+</div> -->
