OE-108: Added corrections

--- a/src/openlmis-quantity-unit-input/openlmis-quantity-unit-input.html
+++ b/src/openlmis-quantity-unit-input/openlmis-quantity-unit-input.html
@@ -23,5 +23,5 @@
         ng-disabled="vm.isQuantityRemainderInDosesDisabled()"
         placeholder="{{'openlmisInputDosesPacks.Doses' | message }}"
         positive-integer />
-    <p> doses ) </p>
+    <p>{{'openlmisInputDosesPacks.DosesBracket' | message }}</p>
 </div>
